building out markdown for individual fridge page.

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+       <script src="https://kit.fontawesome.com/fba8eeb10c.js" crossorigin="anonymous"></script>
+
     <title>Philly Fridges</title>
   </head>
   <body>
